<resources>
    <string name="app_name" translatable="false">Addiyon Keyboard</string>

    <string name="ime_name" translatable="false">Addiyon Keyboard</string>
    <string name="subtype_amharic" translatable="false">አማርኛ</string>
    <string name="default_web_client_id" translatable="false">68341982467-n5slo74o939ij9g9bdnb99ofr1b867ce.apps.googleusercontent.com</string>
</resources>
